--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,11 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 15vh;
+  background-color: #2f2f30;
+  min-height: 8vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
   z-index: 2;
@@ -22,3 +21,5 @@
 .App-link {
   color: #09d3ac;
 }
+
+
