--- a/src/Containers/Main.css
+++ b/src/Containers/Main.css
@@ -18,6 +18,7 @@
     background-size: cover;
     overflow: auto;
     width: 66vw;
+    font-family: sans-serif;
     }
 
 .beer-info{
@@ -35,6 +36,7 @@
     box-sizing: border-box;
     font-size: 1.5em;
     background-color: white;
+    font-family: sans-serif;
 }
 
 .header {
@@ -49,3 +51,4 @@
     top: 0;
     position: relative;
   }
+ 
