--- a/src/Components/Styles/Card.css
+++ b/src/Components/Styles/Card.css
@@ -1,9 +1,12 @@
 .card {
-    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 40%;
-    border-radius: 5px;
-    background: blue;
+  box-shadow: 0 15px 15px 0 rgba(0,0,0,0.6);
+  transition: 0.3s;
+  min-width: 50%;
+  max-width: 50%;
+  max-height: 50%;
+  min-height: 50%;
+  border-radius: 1%;
+  background-color: white
   }
   
 .card:hover {
