--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,14 @@
 }
 
 html, body {
+  background: url("/beer-bg.jpg");
+  background-size: cover;
   height: 100%;
   overflow: hidden;
+}
+
+.bg{
+  background: url("/beer-bg.jpg");
+  
+  ;
 }
