--- a/src/Components/Styles/Card.css
+++ b/src/Components/Styles/Card.css
@@ -1,10 +1,10 @@
 .card {
   box-shadow: 0 15px 15px 0 rgba(0,0,0,0.6);
   transition: 0.3s;
-  min-width: 50%;
-  max-width: 50%;
-  max-height: 50%;
-  min-height: 50%;
+  min-width: 30em;
+  max-width: 30em;
+  max-height: 40em;
+  min-height: 40em;
   border-radius: 1%;
   background-color: white
   }
